--- a/Service/ServiceLayer.csproj
+++ b/Service/ServiceLayer.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Domain\DomainLayer.csproj" />
     <ProjectReference Include="..\Repository\RepositoryLayer.csproj" />
   </ItemGroup>
