-Updated Dbs, Added Web Config

--- a/APIPractice/appsettings.json
+++ b/APIPractice/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnectionString": "Data Source=LAPTOP-GKUBNKMU;Initial Catalog=InventoryDb;Integrated Security=True; Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnectionString": "Host=dpg-ci5i9ddph6eh6mupka60-a.oregon-postgres.render.com; Database=inventorydb_xwwu; Username=mathilda; Password="
+
   },
   "AllowedHosts": "*"
 }
