--- a/APIPractice/Config/web.config
+++ b/APIPractice/Config/web.config
@@ -13,6 +13,6 @@
   </system.webServer>
   -->
   <connectionStrings>
-    <add name="Default_Con" connectionString="HOST=dpg-ci5i9ddph6eh6mupka60-a.oregon-postgres.render.com; DATABASE=inventorydb_xwwu; USER=mathilda; PWD= ;"/>
+    <add name="Default_Con" connectionString="HOST=dpg-ci5i9ddph6eh6mupka60-a.oregon-postgres.render.com; DATABASE=inventorydb_xwwu; USER=mathilda; PASSWORD= ;"/>
   </connectionStrings>
 </configuration>
