-User claims(with HttpContextAccessor)

--- a/APIPractice/appsettings.json
+++ b/APIPractice/appsettings.json
@@ -1,7 +1,7 @@
 {
   "AppSettings": {
-    "Token":  "AD109R"
-  }
+    "Token": "this is my custom Secret key for authentication"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -9,8 +9,9 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnectionString": "Host=dpg-ci5i9ddph6eh6mupka60-a.oregon-postgres.render.com; Database=inventorydb_xwwu; Username=mathilda; Password="
+    "DefaultConnectionString": "Host=dpg-ci5i9ddph6eh6mupka60-a.oregon-postgres.render.com; Database=inventorydb_xwwu; Username=mathilda; Password=nU1qdhxUq18CYn9lSS0B26u3q6kJGPqi"
 
   },
+  
   "AllowedHosts": "*"
 }
