--- a/APIPractice/appsettings.json
+++ b/APIPractice/appsettings.json
@@ -9,7 +9,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnectionString": "Host=dpg-ci5i9ddph6eh6mupka60-a.oregon-postgres.render.com; Database=inventorydb_xwwu; Username=mathilda; Password="
+    "DefaultConnectionString": "Host=dpg-ci5i9ddph6eh6mupka60-a.oregon-postgres.render.com; Database=inventorydb_xwwu; Username=mathilda; Password=nU1qdhxUq18CYn9lSS0B26u3q6kJGPqi"
 
   },
   
