--- a/APIPractice/APIPractice.csproj
+++ b/APIPractice/APIPractice.csproj
@@ -6,9 +6,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>62ccd0cc-ea36-4113-b3da-954eb40e27fc</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
-    <DockerfileContext>.</DockerfileContext>
-    <DockerfileFile>..\Dockerfile</DockerfileFile> 
+    
+
   </PropertyGroup>
 
   <ItemGroup>
@@ -43,5 +42,17 @@
   </ItemGroup>
 
   <ProjectExtensions><VisualStudio><UserProperties appsettings_1development_1json__JsonSchema="https://docs.gradle.com/build-cache-node/schema/build-cache-node-config-schema-5.json" /></VisualStudio></ProjectExtensions>
+
+  <ItemGroup>
+    <None Remove="..\.dockerignore" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="..\.dockerignore" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="..\.dockerignore" />
+  </ItemGroup>
 
 </Project>
